--- a/.github/workflows/autobahn.yml
+++ b/.github/workflows/autobahn.yml
@@ -2,14 +2,14 @@ name: autobahn
 
 on:
   push:
-    branches: 
+    branches:
       - master
-      - dev
+      - testing
   pull_request:
-    branches: 
+    branches:
       - master
-      - dev
-      
+      - testing
+
 jobs:
   test:
     strategy:
@@ -18,23 +18,23 @@ jobs:
         go: [ 1.18.x ]
     runs-on: ${{ matrix.os }}
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Setup Go
-      uses: actions/setup-go@v2
-      with:
-        go-version: ${{ matrix.go }}
-    - name: Autobahn
-      env:
-        CRYPTOGRAPHY_ALLOW_OPENSSL_102: yes
-      run: |
-        chmod +x ./autobahn/script/run.sh & ./autobahn/script/run.sh
-    - name: Autobahn Report Artifact
-      if: >-
-        startsWith(matrix.os, 'ubuntu')
-      uses: actions/upload-artifact@v2
-      
-      with:
-        name: autobahn report ${{ matrix.go }} ${{ matrix.os }}
-        path: autobahn/report
-        retention-days: 7
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup Go
+        uses: actions/setup-go@v2
+        with:
+          go-version: ${{ matrix.go }}
+      - name: Autobahn
+        env:
+          CRYPTOGRAPHY_ALLOW_OPENSSL_102: yes
+        run: |
+          chmod +x ./autobahn/script/run.sh & ./autobahn/script/run.sh
+      - name: Autobahn Report Artifact
+        if: >-
+          startsWith(matrix.os, 'ubuntu')
+        uses: actions/upload-artifact@v2
+
+        with:
+          name: autobahn report ${{ matrix.go }} ${{ matrix.os }}
+          path: autobahn/report
+          retention-days: 7
