Modifying ConcurrentMap Generalized Constraints

--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -24,6 +24,8 @@ linters:
     - gocognit
     - ifshort
     - gochecknoinits
+    - goconst
+    - depguard
   # Enable presets.
   # https://golangci-lint.run/usage/linters
   # Run only fast linters from enabled linters set (first run won't be fast)
