--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,6 @@
+# EditorConfig is awesome: https://EditorConfig.org
+
+# top-most EditorConfig file
 root = true
 
 [*]
@@ -5,21 +8,16 @@ end_of_line = lf
 insert_final_newline = true
 
 [*.go]
-charset = utf-8
 indent_style = tab
 indent_size = 4
 
-[*.{json,mod,toml,.md}]
-charset = utf-8
-indent_style = space
-indent_size = 4
+[Makefile]
+indent_style = tab
 
 [*.{yml,yaml}]
-charset = utf-8
 indent_style = space
 indent_size = 2
 
-[Makefile]
-charset = utf-8
-indent_style = tab
+[*.md]
+indent_style = space
 indent_size = 4
